--- a/app/views/cart_items/edit.html.erb
+++ b/app/views/cart_items/edit.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-5 image">
-            <%= image_tag @cart_item.product.image_id.to_s %>
+            <%= image_tag @cart_item.product.image_id.to_s, size: "200x200" %>
         </div>
 
 		<div class="col-xs-7">
