--- a/app/views/products/_song_fields.html.erb
+++ b/app/views/products/_song_fields.html.erb
@@ -1,6 +1,8 @@
 <div class="nested-fields">
 	<div class="field">
-		<%= f.text_field :song_name, :value => "" %><br>
-		<%= link_to_remove_association "曲削除", f, class: 'btn btn-danger' %>
-		</div>
+		<div style="padding: 5px;">
+		<%= f.text_field :song_name %>
+		<%= link_to_remove_association "曲削除", f, class: 'btn btn-danger btn-sm' %>
+	    </div>
+    </div>
 </div>
