--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -20,41 +20,40 @@
 
         <div class="field">
         	  <label>画像</label>
-            <%= f.file_field :image_id %>
+            <p><%= f.file_field :image_id %></p>
         </div>
 
         <div class="field">
             <label>商品名</label>
-            <%= f.text_field :cd_name %>
+            <p><%= f.text_field :cd_name %></p>
         </div>
 
         <div class="field">
              <label>アーティスト名</label>
-             <%= f.text_field :artist_name %>
+             <p><%= f.text_field :artist_name %></p>
           </div>
 
         <div class="field">
             <label>価格</label>
-            <%= f.number_field :price %>
+            <p><%= f.number_field :price %></p>
         </div>
 
         <div class="field">
             <label>レーベル名</label>
-            <%= f.text_field :label_name %>
+            <p><%= f.text_field :label_name %></p>
         </div>
 
           <div class="field">
             <label>ジャンル</label>
-            <%= f.select :genre_id, Genre.all.map{|g| [g.genre_name, g.id]}, :prompt => "選択してください" %>
+            <p><%= f.select :genre_id, Genre.all.map{|g| [g.genre_name, g.id]}, :prompt => "選択してください" %></p>
           </div>
 
           <div class="field">
-              <label>ディスク番号</label>
               <%= f.fields_for :disks do |d| %>
-                <%= render 'disk_fields', f: d %>
+              <%= render 'disk_fields', f: d %>
               <% end %>
               <div class="links">
-                <%= link_to_add_association '行を追加', f, :disks %>
+                <%= link_to_add_association 'ディスクを追加', f, :disks %>
               </div>
           </div>
 
@@ -62,7 +61,7 @@
             <label>ステータス</label>
             <%= f.select :product_status, [["販売中", "on_sale"], ["販売停止中", "not_on_sale"]], :prompt => "選択してください" %>
         </div>
-      <%= f.submit '完了', class: 'btn btn-primary btn-block' %>
+      <%= f.submit '完了', class: 'btn btn-primary btn-lg' %>
       <% end %>
   </div>
   <%= render "shared/footer_admin" %>
