--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -1,5 +1,5 @@
 
-<header class="container-fluid" style="height:150px;padding-top:10px;">
+<header class="container-fluid" style="height:150px;padding-top:10px;margin-left:0; margin-right: 0;">
 	<div class="row" >
 		<div class="col-xs-3">
 			<%= link_to image_tag('logo.png', :size => '250x100'), admin_root_path %>
