--- a/app/views/products/_disk_fields.html.erb
+++ b/app/views/products/_disk_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="nested-fields">
 	<div class="field">
 	<label>ディスク番号</label><br>
-	<%= f.number_field :disk_number, :value =>"" %>
+	<%= f.number_field :disk_number %>
 	<%= link_to_remove_association "ディスク削除", f, class: 'btn btn-danger btn-sm', role: 'button' %>
 	</div>
 	<div class="field">
