--- a/app/views/order_histories/index.html.erb
+++ b/app/views/order_histories/index.html.erb
@@ -44,6 +44,9 @@
         <% end %>
       </tbody>
     </table>
+    <div style="text-align: center; font-size: 25px;">
+  <%= paginate(@order_histories) %>
+</div>
   </div>
   <div class="col-xs-2">
   </div>
