--- a/app/views/end_users/unsubscribe.html.erb
+++ b/app/views/end_users/unsubscribe.html.erb
@@ -21,7 +21,7 @@
 	<div class="row">
 		<div class= "col-xs-3">
 		</div>
-	<div class="col-xs-6 col-xs-offset-3">
+	<div class="col-xs-6">
 	<div class="btn-group col-xs-4 col-xs-offset-4" style="margin-top:50px; margin-bottom: 20px;">
 		<%= link_to '退会する', destroy_end_user_session_path(is_deleted: 1), class: "btn btn-danger", method: :delete, "data-confirm" => "本当に退会しますか？" %>
 	</div>
