--- a/app/views/products/admin_show.html.erb
+++ b/app/views/products/admin_show.html.erb
@@ -49,10 +49,10 @@
     <div class="col-xs-12">
       <h2>曲目リスト</h2>
       <% @product.disks.each do |disk| %>
-        <table class="table table-striped">
+        <table class="table table-striped" style="margin: 15px 0 30px;">
           <tbody>
             <tr>
-              <td><%= "ディスク:" + disk.disk_number.to_s %></td>
+              <td><%= "ディスク: #{disk.disk_number}" %></td>
             </tr>
             <% disk.songs.each do |song| %>
             <tr>
@@ -62,6 +62,7 @@
           </tbody>
 
         </table>
+        <% count = 0 %>
       <% end %>
     </div>
   </div>
