--- a/app/views/end_users/admin_show.html.erb
+++ b/app/views/end_users/admin_show.html.erb
@@ -55,6 +55,7 @@
         <div><%= @addresses_is_main.telephone_number %></div>
       </div>
     </div>
+    <%= link_to "編集", edit_user_path(@user.id), class: "btn btn-success", style: "margin-bottom: 20px; width: 80px;" %>
     <%= link_to "このユーザを退会させる", "/admin/end_users/#{@user.id}/destroy", class: "btn btn-danger", style: "margin-bottom: 20px;", method: :post, "data-confirm" => "本当に退会させますか？" %>
   </div>
   <% if @order_histories != [] %>
