--- a/app/views/end_users/admin_show.html.erb
+++ b/app/views/end_users/admin_show.html.erb
@@ -116,7 +116,7 @@
             </tr>
             <tr>
               <td>ステータス</td>
-              <td><%= order_history.order_status %></td>
+              <td><%= order_history.order_status_i18n %></td>
               <td colspan="2"></td>
             </tr>
           </tbody>
